--- a/_lib/linux/lts/statement_presentation.html
+++ b/_lib/linux/lts/statement_presentation.html
@@ -61,7 +61,7 @@ if false; then true; # -->
 <!-- # --><h1>Statement</h1>
 <!--
 fi
- '_o_' '"$scriptAbsoluteFolder"/../../../ubiquitous_bash.sh _kernelConfig_desktop "$scriptAbsoluteFolder"/.config'
+ '_o_' '_kernelConfig_desktop "$scriptAbsoluteFolder"/.config'
 if false; then true; # -->
 <!-- # --><pre style="-webkit-print-color-adjust: exact;background-color:#848484;margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
 <!-- # --><span style="color:#54ff54;background-color:#18b2b2;"> kernelConfig: desktop</span>
@@ -69,30 +69,17 @@ if false; then true; # -->
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> Carefully evaluate 'tradeoff-legacy' for specific use cases.</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: tradeoff-harden</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> Carefully evaluate 'tradeoff-harden' for specific use cases.</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_PAGE_TABLE_ISOLATION</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_RETPOLINE</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_RETHUNK</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_UNRET_ENTRY</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_CALL_DEPTH_TRACKING</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_IBPB_ENTRY</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_IBRS_ENTRY</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_SRSO</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_GDS</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_MDS</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_TAA</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_MMIO_STALE_DATA</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_L1TF</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_RETBLEED</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_SPECTRE_V1</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_SPECTRE_V2</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_SRBDS</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_SSB</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: MITIGATION_SLS</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_INTEL_TDX_GUEST</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_RETPOLINE</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_PAGE_TABLE_ISOLATION</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_RETHUNK</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_CPU_UNRET_ENTRY</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_CPU_IBPB_ENTRY</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_CPU_IBRS_ENTRY</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_SLS</span>
+<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_X86_SGX_kVM</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: TDX_GUEST_DRIVER</span>
 <!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: CONFIG_AMD_MEM_ENCRYPT_ACTIVE_BY_DEFAULT</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: virtualization-accessory</span>
-<!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:    Y: KVM_HYPERV</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: virtualbox</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: boot</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: arch-x64</span>
@@ -117,7 +104,7 @@ if false; then true; # -->
 <!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:    Y: CONFIG_GENTOO_LINUX_INIT_SCRIPT</span>
 <!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:    Y: CONFIG_GENTOO_LINUX_INIT_SYSTEMD</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: investigation</span>
-<!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:  M/Y: ACPI_HMAT</span>
+<!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:    N: ACPI_HMAT</span>
 <!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:  M/Y: CONFIG_UCLAMP_TASK</span>
 <!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:  M/Y: CPU_IDLE_GOV_TEO</span>
 <!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:  M/Y: LOCK_EVENT_COUNTS</span>
@@ -125,10 +112,7 @@ if false; then true; # -->
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: investigation: prog</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: convenience</span>
 <!-- # --><span style="color:#18b2b2;background-color:#848484;"> kernelConfig: special</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: X86_FRED</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: SLAB_BUCKETS</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     Y: BLK_DEV_WRITE_MOUNTED</span>
-<!-- # --><span style="color:#b21818;background-color:#848484;"> bad: not:     N: SSB_SDIOHOST_POSSIBLE</span>
+<!-- # --><span style="color:#ffff54;background-color:#848484;"> warn: not:    N: BLK_DEV_WRITE_MOUNTED</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> request: make menuconfig</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> request: make -j $(nproc)</span>
 <!-- # --><span style="color:#b218b2;background-color:#848484;"> request: make deb-pkg -j $(nproc)</span>
@@ -141,8 +125,9 @@ if false; then true; # -->
 <!--
 fi
 _t '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
-Linux kernel &#39;lts_5.10.???-intel&#39; . Config file in this directory. 
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Linux kernel &#39;mainline&#39; &#39;intel&#39; . Config file in this directory. 
+
+May be exact duplicate of config from &#39;lts&#39; . 
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_heading1' 'Reference'
